--- a/pom.xml
+++ b/pom.xml
@@ -92,11 +92,21 @@
             <artifactId>junit</artifactId>
 			<scope>test</scope>
         </dependency>
-        <dependency>
-            <groupId>org.apache.james</groupId>
-            <artifactId>apache-mailet</artifactId>
-            <version>2.4</version>
-        </dependency>
+		<dependency>
+		    <groupId>org.apache.james</groupId>
+		    <artifactId>apache-mailet-base</artifactId>
+		    <version>3.1.0</version>	    
+		</dependency>
+		<dependency>
+		    <groupId>org.apache.james</groupId>
+		    <artifactId>apache-mailet-api</artifactId>
+		    <version>3.1.0</version>	    
+		</dependency>	
+		<dependency>
+		    <groupId>org.apache.james</groupId>
+		    <artifactId>james-server-mailets</artifactId>
+		    <version>3.1.0</version>	    
+		</dependency>	
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
