--- a/pom.xml
+++ b/pom.xml
@@ -57,7 +57,7 @@
 		  <dependency>
 				<groupId>org.springframework.cloud</groupId>
 				<artifactId>spring-cloud-starter-parent</artifactId>
-				<version>Greenwich.M3</version>
+				<version>Greenwich.RC1</version>
 				<type>pom</type>
 				<scope>import</scope>
 		  </dependency>  
@@ -177,7 +177,6 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>2.0.2</version>
                 <configuration>
                 <fork>true</fork>
                     <archive>
@@ -198,7 +197,6 @@
 		    <plugin>
 		        <groupId>org.apache.maven.plugins</groupId>
 		        <artifactId>maven-source-plugin</artifactId>
-		        <version>2.0.3</version>
 		        <executions>
 		          <execution>
 		            <goals>
