--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.nhind</groupId>
     <artifactId>xdmail</artifactId>
-    <version>6.1-SNAPSHOT</version>
+    <version>6.0.1-SNAPSHOT</version>
     <name>NHIN Direct XD* Mail Gateway</name>
     <description>NHIN Direct XD* Mail Gateway</description>
     <url>https://github.com/DirectProjectJavaRI/xdmail</url>  
@@ -35,7 +35,7 @@
 	<parent>
 	   <groupId>org.springframework.boot</groupId>
 	   <artifactId>spring-boot-dependencies</artifactId>
-	   <version>2.1.2.RELEASE</version>
+	   <version>2.1.3.RELEASE</version>
 	</parent> 
     <scm>
       <url>https://github.com/DirectProjectJavaRI/xdmail.git</url>  
@@ -46,14 +46,14 @@
 		  <dependency>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-dependencies</artifactId>
-				<version>2.1.2.RELEASE</version>
+				<version>2.1.3.RELEASE</version>
 				<type>pom</type>
 				<scope>import</scope>
 		  </dependency>		
 		  <dependency>
 				<groupId>org.springframework.cloud</groupId>
 				<artifactId>spring-cloud-starter-parent</artifactId>
-				<version>Greenwich.RELEASE</version>
+				<version>Greenwich.SR1</version>
 				<type>pom</type>
 				<scope>import</scope>
 		  </dependency>  
@@ -120,19 +120,19 @@
         <dependency>
             <groupId>org.nhind</groupId>
             <artifactId>xd-common</artifactId>
-            <version>6.0</version>
+            <version>6.0.1-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency> 
         <dependency>
             <groupId>org.nhind</groupId>
             <artifactId>agent</artifactId>
-            <version>6.0</version>
+            <version>6.0.3-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>org.nhind</groupId>
             <artifactId>gateway</artifactId>
-            <version>6.0</version>
+            <version>6.0.2-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>          
 		<dependency>
